--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,5 @@
 {
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports",
-    "prettier-plugin-tailwindcss"
-  ],
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
