--- a/components.json
+++ b/components.json
@@ -12,14 +12,7 @@
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks",
-    "http": "@/http",
-    "types": "@/types",
-    "validators": "@/validators",
-    "stores": "@/stores"
+    "utils": "@/utils/shadcn"
   },
   "iconLibrary": "lucide"
 }
