--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "quill": "2.0.3",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-quill-new": "^3.4.6",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
