--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_STORAGE_URL=http://localhost:8000/storage
 
 NEXTAUTH_SECRET=your_super_secret_key
 NEXTAUTH_URL=http://localhost:3000
