--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_STORAGE_URL=http://localhost:8000/storage
 
 NEXTAUTH_SECRET=your_super_secret_key
 NEXTAUTH_URL=http://localhost:3000
+AUTH_TRUST_HOST=true
