--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_URL=https://luminaqa.stembascc.com/api/v1/api
 NEXT_PUBLIC_STORAGE_URL=http://localhost:8000/storage
 
 NEXTAUTH_SECRET=your_super_secret_key
