fix: update storage url in env example, restart modal, exam timeout

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_URL=https://luminaqa.stembascc.com/api/v1/api
-NEXT_PUBLIC_STORAGE_URL=http://localhost:8000/storage
+NEXT_PUBLIC_STORAGE_URL=https://luminaqa.stembascc.com/public/
 
 NEXTAUTH_SECRET=your_super_secret_key
 NEXTAUTH_URL=http://localhost:3000
